# x-claw

./: .gitignore  .mcp.json  CLAUDE.md  README.md  accounts.db  main.py  mitm_mcp_traffic.db  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: accounts.py  bilibili_users.py  bilibili_videos.py  douyin_users.py  douyin_videos.py  kuaishou_users.py  kuaishou_videos.py  reddit_posts.py  reddit_subreddit.py  reddit_users.py  trends.py  tweets.py  users.py  weibo_posts.py  weibo_users.py  xhs_notes.py  xhs_users.py  zhihu_content.py  zhihu_users.py
app/core/: account_pool.py  bilibili.py  config.py  douyin.py  kuaishou.py  reddit.py  twscrape.py  weibo.py  xhs.py  zhihu.py
app/schemas/: bilibili.py  douyin.py  kuaishou.py  reddit_post.py  reddit_user.py  tweet.py  user.py  weibo.py  xhs.py  zhihu.py
cookies/: @ibrah28216.json
cookies/reddit/: 33circle33.json
libs/: zhihu.js
mcp/: CLAUDE.md
mcp/src/mitmproxy_mcp/core/: server.py
