[project]
name = "x-claw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx==0.28.1",
    "uvicorn[standard]>=0.34.0",
    "twscrape>=0.12.0",
    "pydantic-settings>=2.7.0",
    "xhshow>=0.0.2",
    "PyExecJS>=1.5.1",
    "playwright>=1.44.0",
    "aiosqlite>=0.20.0",
]
